# py3html

./: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: ci.yml
.github/workflows/lint-and-test/: action.yml
docs/: index.md  usage.md
py3html/: __init__.py
search/: search_index.json
tests/: test_ph.py  test_py3html.py
usage/: index.html
